# Visual-Fusion-Real-Time

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: api.md  design-notes.md
experiments/configs/: clip_vitb32.yaml  default.yaml  milvus.yaml
scripts/: build_faiss_ivfpq.py  demo_text_queries.py  download_models.sh  import_folder_as_class.py  run_streamlit.sh
src/app/: main_rt.py  ui_gradio.py  ui_streamlit.py
src/core/: config.py  logging_utils.py  types.py  utils.py
src/eval/: bench_rt.py  metrics.py
src/io/: image_io.py  overlay.py  webcam.py
src/memory/: faiss_store.py  incremental.py  milvus_store.py  schema.py  store_router.py
src/models/backbones/: clip_vision.py  registry.py  vit_vision.py
src/models/heads/: decision.py
src/models/preproc/: augment.py  transforms.py
src/models/text/: clip_text.py  hf_text.py  registry.py
src/pipeline/: calibrate.py  encode.py  inference.py  register.py
src/retrieval/: fusion.py  retriever.py
tests/: test_memory_store.py  test_register_flow.py  test_retriever.py  test_rt_loop.py
